--- a/style.css
+++ b/style.css
@@ -1,21 +1,8 @@
-* 
-{ 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body 
 { 
     font: 13px Helvetica, Arial;
 }
-form 
-{ 
-    background: #000;
-    padding: 3px;
-    position: fixed; 
-    bottom: 0; 
-    width: 100%; 
-}
+
 form input 
 { 
     border: 0; 
@@ -30,17 +17,9 @@ form button
     border: none; 
     padding: 10px; 
 }
-#messages 
+#player 
 { 
     list-style-type: none; 
     margin: 0; 
     padding: 0; 
-}
-#messages li 
-{ 
-    padding: 5px 10px; 
-}
-#messages li:nth-child(odd) 
-{ 
-    background: #eee; 
 }
